--- a/about.html
+++ b/about.html
@@ -36,22 +36,16 @@
                     <div class="col-lg-6"></div>
                     <div class="col-lg-4 nav-wrapper my-5">
                         <nav class="nav-bar">
-                            <div class="menu-container">
-                                <span class="menu">
-                                    <span class="menu-inner">
-                                        <span class="menu-line"></span>
-                                        <span class="menu-line"></span>
-                                    </span>
-                                </span>
+                            <div class="menu">
+                                <div class="menu-line"></div>
+                                <div class="menu-line"></div>
                             </div>
-                            <div class="nav-inner">
-                                <ul>
-                                    <li class = "link mx-3"><a href="index.html">Home</a></li>
-                                    <li class = "link current-page mx-3"><a href="#">About</a></li>
-                                    <li class = "link mx-3"><a href="works.html">Works</a></li>
-                                    <li class = "link mx-3"><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </div>
+                            <ul class = "nav-links">
+                                <li class = "link mx-3"><a href="index.html">Home</a></li>
+                                <li class = "link mx-3 current-page"><a href="#">About</a></li>
+                                <li class = "link mx-3"><a href="works.html">Works</a></li>
+                                <li class = "link mx-3"><a href="contact.html">Contact</a></li>
+                            </ul>
                         </nav>
                     </div>
                 </div>
@@ -61,8 +55,22 @@
                     <div class="col-lg-8">
                         <h1 class="title">About Me</h1>
                         <p class = "about">If you found your way to this page, you're probably wondering who
-                            I am. On my freetime, you can find me listening various genres of electronic music, playing video games
-                            or working on my personal projects.
+                            I am! Well, this is me.
+                        </p>
+                        <br>
+                        <p class="about">Ok, that WAS me, here's a more recent picture of me.</p>
+                        <br>
+                        <p class="about">After doing some basic programming with Python, I became fascinated with programming
+                            and ever since, I have been <span class="color-change">learning C++, JavaScript</span> 
+                            and <span class="color-change">HTML/CSS</span>.</p>
+                        <p class="about">I enjoy building <span class="color-change">beautiful, modern</span> and 
+                            <span class="color-change">responsive</span> websites with an emphasis on 
+                            <span class="color-change">animated content</span>.
+                        </p>
+                        <br>
+                        <p class="about">I'm always looking for 
+                            cool stuff to work on. Got a cool idea?
+                            <span class="color-change">Contact me!</span>
                         </p>
                     </div>
                     <div class="col-lg-2"></div>
