--- a/contact.html
+++ b/contact.html
@@ -30,50 +30,44 @@
         <main data-barba="container" data-barba-namespace="contact">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-2 logo-wrapper my-5 mx-auto">
+                    <div class="col-md-2 logo-wrapper my-5 mx-auto">
                         <h1 class="logo">j<span class = "color-change">/</span>w</h1>
                     </div>
-                    <div class="col-lg-6"></div>
-                    <div class="col-lg-4 nav-wrapper my-5">
+                    <div class="col-md-6"></div>
+                    <div class="col-md-4 nav-wrapper my-5">
                         <nav class="nav-bar">
-                            <div class="menu-container">
-                                <span class="menu">
-                                    <span class="menu-inner">
-                                        <span class="menu-line"></span>
-                                        <span class="menu-line"></span>
-                                    </span>
-                                </span>
+                            <div class="menu">
+                                <div class="menu-line"></div>
+                                <div class="menu-line"></div>
                             </div>
-                            <div class="nav-inner">
-                                <ul>
-                                    <li class = "link mx-3"><a href="index.html">Home</a></li>
-                                    <li class = "link mx-3"><a href="about.html">About</a></li>
-                                    <li class = "link mx-3"><a href="works.html">Works</a></li>
-                                    <li class = "link current-page mx-3"><a href="#">Contact</a></li>
-                                </ul>
-                            </div>
+                            <ul class = "nav-links">
+                                <li class = "link mx-3"><a href="index.html">Home</a></li>
+                                <li class = "link mx-3"><a href="about.html">About</a></li>
+                                <li class = "link mx-3"><a href="works.html">Works</a></li>
+                                <li class = "link mx-3 current-page"><a href="#">Contact</a></li>
+                            </ul>
                         </nav>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-8 my-auto contact-center-content">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 my-auto contact-center-content">
                         <div class="content-wrapper">
-                            <h1 class="title">Contact Me!</h1>
+                            <h1 class="contact-title">Contact Me!</h1>
                             <p class="contact-message content">I am available for work! Feel free to shoot me an email if you are interested.</p>
                             <h1 class="email content">Jason.Wong47@myhunter.cuny.edu</h1>
                         </div>
                     </div>
-                    <div class="col-lg-2"></div>
+                    <div class="col-md-2"></div>
                     <div class="links-container my-5">
                         <ul class="links">
                             <a href = "https://github.com/ShadowViper"><li class="link-contact mx-5">GitHub</li></a>
                             <a href= "https://www.linkedin.com/in/jason-wong-/"><li class="link-contact mx-5">LinkedIn</li></a>
                             <a href = ""><li class="link-contact mx-5">Email</li></a>
                         </ul>
-                        <button class="toggle" type="button" id = "colorChange" onclick="lightMode();">change theme</button>
                     </div>
+                    <button class="toggle" type="button" id = "colorChange" onclick="lightMode();">change theme</button>
                 </div>
             </div>
         </main>
