--- a/works.html
+++ b/works.html
@@ -37,22 +37,16 @@
                     <div class="col-lg-6"></div>
                     <div class="col-lg-4 nav-wrapper my-5">
                         <nav class="nav-bar">
-                            <div class="menu-container">
-                                <span class="menu">
-                                    <span class="menu-inner">
-                                        <span class="menu-line"></span>
-                                        <span class="menu-line"></span>
-                                    </span>
-                                </span>
+                            <div class="menu">
+                                <div class="menu-line"></div>
+                                <div class="menu-line"></div>
                             </div>
-                            <div class="nav-inner">
-                                <ul>
-                                    <li class = "link mx-3"><a href="index.html">Home</a></li>
-                                    <li class = "link mx-3"><a href="about.html">About</a></li>
-                                    <li class = "link current-page mx-3"><a href="#">Works</a></li>
-                                    <li class = "link mx-3"><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </div>
+                            <ul class = "nav-links">
+                                <li class = "link mx-3"><a href="index.html">Home</a></li>
+                                <li class = "link mx-3"><a href="about.html">About</a></li>
+                                <li class = "link mx-3 current-page"><a href="#">Works</a></li>
+                                <li class = "link mx-3"><a href="contact.html">Contact</a></li>
+                            </ul>
                         </nav>
                     </div>
                 </div>
@@ -62,44 +56,45 @@
                     <div class="col-lg-8 my-5">
                         <div class="wrapper">
                             <div class="category-wrapper">
-                                <a href="https://github.com/ShadowViper" class="link">
+                                <a href="https://github.com/ShadowViper" class="work-link">
                                     <h1 class = "category">Class - Computer Science</h1>
                                     <h1 class = "class-type">CSCI-127</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="https://github.com/ShadowViper" class="link">
+                                <a href="https://github.com/ShadowViper" class="work-link">
                                     <h1 class = "category">Class - Computer Science</h1>
                                     <h1 class = "class-type">CSCI-135</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="https://github.com/ShadowViper" class="link">
+                                <a href="https://github.com/ShadowViper/Data-Structures-and-Algorithims" class="work-link">
                                     <h1 class="category">Class - Computer Science</h1>
                                     <h1 class = "class-type">CSCI-235</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/medp.html" class="link">
+                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/medp.html" class="work-link">
                                     <h1 class = "category">Class - Media Studies</h1>
                                     <h1 class = "class-type">MEDP-150</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/medp285.html" class="link">
+                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/medp285.html" class="work-link">
                                     <h1 class="category">Class - Media Studies</h1>
                                     <h1 class = "class-type">MEDP-285</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="" class="link"></a>
-                                <h1 class="category">Class - Media Studies</h1>
-                                <h1 class = "class-type">MEDP-331</h1>
+                                <a href="" class="work-link">
+                                    <h1 class="category">Class - Media Studies</h1>
+                                    <h1 class = "class-type">MEDP-331</h1>
+                                </a>
                                 <div class="whitespace"></div>
                             </div>
                         </div>
