--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,14 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-2 logo-wrapper my-5 mx-auto">
-                        <h1 class="logo">j<span class = "color-change">/</span>w</h1>
+                        <a href="index.html" class="back-home"><h1 class="logo">j<span class = "color-change">/</span>w</h1></a>
                     </div>
                     <div class="col-md-6"></div>
                     <div class="col-md-4 nav-wrapper my-5">
                         <nav class="nav-bar">
                             <div class="menu">
-                                <div class="menu-line"></div>
-                                <div class="menu-line"></div>
+                                <div class="menu-line" id = "menu-line"></div>
+                                <div class="menu-line" id = "menu-line-1"></div>
                             </div>
                             <ul class = "nav-links">
                                 <li class = "link mx-3"><a href="index.html">Home</a></li>
@@ -67,7 +67,7 @@
                             <a href = ""><li class="link-contact mx-5">Email</li></a>
                         </ul>
                     </div>
-                    <button class="toggle" type="button" id = "colorChange" onclick="lightMode();">change theme</button>
+                    <button class="toggle" type="button" id = "colorChange">change theme</button>
                 </div>
             </div>
         </main>
