--- a/about.html
+++ b/about.html
@@ -31,14 +31,14 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-2 logo-wrapper my-5 mx-auto">
-                        <h1 class="logo">j<span class = "color-change">/</span>w</h1>
+                        <a href="index.html" class="back-home"><h1 class="logo">j<span class = "color-change">/</span>w</h1></a>
                     </div>
                     <div class="col-lg-6"></div>
                     <div class="col-lg-4 nav-wrapper my-5">
                         <nav class="nav-bar">
                             <div class="menu">
-                                <div class="menu-line"></div>
-                                <div class="menu-line"></div>
+                                <div class="menu-line" id = "menu-line"></div>
+                                <div class="menu-line" id = "menu-line-1"></div>
                             </div>
                             <ul class = "nav-links">
                                 <li class = "link mx-3"><a href="index.html">Home</a></li>
@@ -85,7 +85,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-7"></div>
-                    <div class="col-lg-2 my-5"><button class="toggle" type="button" id = "colorChange" onclick="lightMode();">change theme</button></div>
+                    <div class="col-lg-2 my-5"><button class="toggle" type="button" id = "colorChange" >change theme</button></div>
                 </div>
             </div>
         </main>
