--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
             <div class="border-box container-fluid">
                 <div class="row" id = "row1">
                     <div class="col-md-2 logo-wrapper my-5 mx-auto">
-                        <h1 class="logo">j<span class = "color-change">/</span>w</h1>
+                        <a href = "index.html" class = "back-home"><h1 class="logo">j<span class = "color-change">/</span>w</h1></a>
                     </div>
                     <div class="col-md-6 spacer" id = "spacer"></div>
                     <div class="col-md-4 nav-wrapper my-5">
                         <nav class="nav-bar">
                             <div class="menu">
-                                <div class="menu-line"></div>
-                                <div class="menu-line"></div>
+                                <div class="menu-line" id = "menu-line"></div>
+                                <div class="menu-line" id = "menu-line-1"></div>
                             </div>
                             <ul class = "nav-links">
-                                <li class = "link current-page mx-3"><a href="#">Home</a></li>
-                                <li class = "link mx-3"><a href="about.html">About</a></li>
-                                <li class = "link mx-3"><a href="works.html">Works</a></li>
-                                <li class = "link mx-3"><a href="contact.html">Contact</a></li>
+                                <li class = "link current-page mx-3"><a href="#" id = "home">Home</a></li>
+                                <li class = "link mx-3"><a href="about.html" id = "about">About</a></li>
+                                <li class = "link mx-3"><a href="works.html" id = "works">Works</a></li>
+                                <li class = "link mx-3"><a href="contact.html" id = "contact">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -93,7 +93,7 @@
                         </ul>
                     </div>
                     <div class="col-md-7 spacer"></div>
-                    <div class="col-md-2 my-5"><button class="toggle" type="button" id = "colorChange" onclick="lightMode();">change theme</button></div>
+                    <div class="col-md-2 my-5"><button class="toggle" type="button" id = "colorChange">change theme</button></div>
                 </div>
             </div>
         </main>
