--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                         <ul class="links">
                             <a href = "https://github.com/ShadowViper"><li class="link-contact mx-5">GitHub</li></a>
                             <a href= "https://www.linkedin.com/in/jason-wong-/"><li class="link-contact mx-5">LinkedIn</li></a>
-                            <a href = ""><li class="link-contact mx-5">Email</li></a>
+                            <a href = ""><li class="link-contact mx-5 email">Email</li></a>
                         </ul>
                     </div>
                     <button class="toggle" type="button" id = "colorChange">change theme</button>
