--- a/works.html
+++ b/works.html
@@ -107,7 +107,7 @@
                         <ul class="links">
                             <a href = "https://github.com/ShadowViper"><li class="link mx-3">GitHub</li></a>
                             <a href= "https://www.linkedin.com/in/jason-wong-/"><li class="link mx-3">LinkedIn</li></a>
-                            <a href = ""><li class="link mx-3">Email</li></a>
+                            <a href = ""><li class="link mx-3 email">Email</li></a>
                         </ul>
                     </div>
                     <div class="col-lg-7"></div>
