--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <ul class="links" id = "links">
                             <a href = "https://github.com/ShadowViper"><li class="link mx-3">GitHub</li></a>
                             <a href= "https://www.linkedin.com/in/jason-wong-/"><li class="link mx-3">LinkedIn</li></a>
-                            <a href = ""><li class="link mx-3">Email</li></a>
+                            <a href = ""><li class="link mx-3 email">Email</li></a>
                         </ul>
                     </div>
                     <div class="col-md-7 spacer"></div>
