--- a/works.html
+++ b/works.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.svg">
     <title>WOR/KS</title>
 </head>
 <body id = "works" data-barba="wrapper">
@@ -77,21 +78,21 @@
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/medp.html" class="work-link">
+                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/oldportfolio/medp.html" class="work-link">
                                     <h1 class = "category">Class - Media Studies</h1>
                                     <h1 class = "class-type">MEDP-150</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/medp285.html" class="work-link">
+                                <a href="https://fmundergrad.hunter.cuny.edu/~wongj/medp150/oldportfolio/medp285.html" class="work-link">
                                     <h1 class="category">Class - Media Studies</h1>
                                     <h1 class = "class-type">MEDP-285</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="" class="work-link">
+                                <a href="./medp331/class_1/index.html" class="work-link">
                                     <h1 class="category">Class - Media Studies</h1>
                                     <h1 class = "class-type">MEDP-331</h1>
                                 </a>
