--- a/medp331/class_1/index.html
+++ b/medp331/class_1/index.html
@@ -10,57 +10,63 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Class 1</title>
 </head>
-<body>
-    <div class="wrapper container-fluid">
-        <div class="scroll" id = "scrollbar"></div>
-        <section class = "main-content">
-            <h1 class="class-name">MEDP-311</h1>
-            <p class="about-me">course homepage</p>
-        </section>
-        <section class = "other-content">
-            <h1 class = "about">About Me</h1>
-            <div class="vertical-line" id = "vertical-line"></div>
-            <br>
+<body id = "works" data-barba="wrapper">
+    <main data-barba="container" data-barba-namespace="works">
+        <div class="wrapper container-fluid">
+            <div class="scroll" id = "scrollbar"></div>
+            <section class = "main-content">
+                <h1 class="class-name">MEDP-311</h1>
+                <p class="about-me">course homepage</p>
+            </section>
+            <section class = "other-content">
+                <h1 class = "about">About Me</h1>
+                <div class="vertical-line" id = "vertical-line"></div>
+                <br>
 
-            <div class="whitespace"></div>
-            <div class="whitespace"></div>
+                <div class="whitespace"></div>
+                <div class="whitespace"></div>
 
-            <div class="row">
-                <div class="col-lg-7"></div>
-                <div class="col-lg-4 about-content" data-aos="fade-left" data-aos-duration="1000">
-                    I'm a third year student at Hunter College majoring in Computer Science and 
-                    minoring in Media Studies.
+                <div class="row">
+                    <div class="col-lg-7"></div>
+                    <div class="col-lg-4 about-content" data-aos="fade-left" data-aos-duration="1000">
+                        I'm a third year student at Hunter College majoring in Computer Science and 
+                        minoring in Media Studies.
+                    </div>
+                    <div class="col-lg-1"></div>
                 </div>
-                <div class="col-lg-1"></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-4 about-content" data-aos="fade-right" data-aos-duration="1000">
-                   Through this class, I plan to develop my skills with JavaScript and other backend frameworks
-                   like Node.js and SQL.
+                <div class="row">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-4 about-content" data-aos="fade-right" data-aos-duration="1000">
+                    Through this class, I plan to develop my skills with JavaScript and other backend frameworks
+                    like Node.js and SQL.
+                    </div>
+                    <div class="col-lg-7"></div>
                 </div>
-                <div class="col-lg-7"></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-7"></div>
-                <div class="col-lg-4 about-content" data-aos="fade-left" data-aos-duration="1000">
-                    Feel free to look at my other works for my other classes in the link down below!
+                <div class="row">
+                    <div class="col-lg-7"></div>
+                    <div class="col-lg-4 about-content" data-aos="fade-left" data-aos-duration="1000">
+                        Feel free to look at my other works for my other classes in the link down below!
+                    </div>
+                    <div class="col-lg-1"></div>
                 </div>
-                <div class="col-lg-1"></div>
-            </div>
-        </section>
-        <section class = "links">
-            <ul class="link-list">
-                <a href="https://github.com/ShadowViper">GitHub</a>
-                <a href="https://shadowviper.github.io/">All Works</a>
-            </ul>
-        </section>
-    </div>
-    
+            </section>
+            <section class = "links">
+                <ul class="link-list">
+                    <a href="https://github.com/ShadowViper">GitHub</a>
+                    <a href="https://shadowviper.github.io/">All Works</a>
+                </ul>
+            </section>
+            <section class = "random-img">
+                <div class="img-container">
+                    Since you made it this far on my website, enjoy this image of a dog!
+                    <img class = "dog-img" src="https://images.unsplash.com/photo-1505628346881-b72b27e84530?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80">
+                </div>
+            </section>
+        </div>
+    </main>
     <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
