--- a/works.html
+++ b/works.html
@@ -92,7 +92,7 @@
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="./medp331/class_1/index.html" class="work-link">
+                                <a href="./medp331/works.html" class="work-link">
                                     <h1 class="category">Class - Media Studies</h1>
                                     <h1 class = "class-type">MEDP-331</h1>
                                 </a>
