--- a/medp331/class_6_midterm/index.html
+++ b/medp331/class_6_midterm/index.html
@@ -4,11 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Online Pokedex</title>
+    <title>Pokey.dex</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <div class="scrollbar">
+        <div class="scrollbar-tracker"></div>
+    </div>
+    <div class="wrapper container-fluid">
+        <div class="row">
+            <div class="col-md-12 p-5">
+                <nav class="navbar">
+                    <h1 class="header-name ">Pokey.dex</h1>
+                    <div class="search-container">
+                        <input id = "pokemon-name" type="text" class="search" placeholder="Search for a pokemon">
+                        <button class = "button-search" id = "pokemon-search"><i class="fas fa-search"></i></button>
+                        
+                    </div>
+                </nav>
+                <div class="regions">
+                    <button class = "filter-button" id = "filter-kanto">Kanto</button>
+                    <button class = "filter-button" id = "filter-johto">Johto</button>
+                    <button class = "filter-button" id = "filter-hoenn">Hoenn</button>
+                    <button class = "filter-button" id = "filter-sinnoh">Sinnoh</button>
+                    <button class = "filter-button" id = "filter-unova">Unova</button>
+                    <button class = "filter-button" id = "filter-kalos">Kalos</button>
+                    <button class = "filter-button" id = "filter-alola">Alola</button>
+                    <button class = "filter-button" id = "filter-galar">Galar</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div id = "content-container" class="content-container"></div>
+        </div>
+    </div>
+
+    <script src="https://unpkg.com/@barba/core"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha512-XKa9Hemdy1Ui3KSGgJdgMyYlUg1gM+QhL6cnlyTe2qzMCYm4nAZ1PsVerQzTTXzonUR+dmswHqgJPuwCq1MaAg==" crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
