updated with card styling

--- a/medp331/class_6_midterm/index.html
+++ b/medp331/class_6_midterm/index.html
@@ -26,10 +26,10 @@
                     <div class="search-container">
                         <input id = "pokemon-name" type="text" class="search" placeholder="Search for a pokemon">
                         <button class = "button-search" id = "pokemon-search"><i class="fas fa-search"></i></button>
-                        
                     </div>
                 </nav>
                 <div class="regions">
+                    <button class = "filter-button" id = "filter-all">All</button>
                     <button class = "filter-button" id = "filter-kanto">Kanto</button>
                     <button class = "filter-button" id = "filter-johto">Johto</button>
                     <button class = "filter-button" id = "filter-hoenn">Hoenn</button>
