change layout of the popup card

--- a/medp331/class_6_midterm/index.html
+++ b/medp331/class_6_midterm/index.html
@@ -23,7 +23,7 @@
                     <h1 class="header-name">Pokey.dex</h1>
                     <form>
                         <div class="search-container" id = "search">
-                            <input id = "pokemon-name" type="text" class="search" placeholder="Search for a pokemon">
+                            <input id = "pokemon-search-name" type="text" class="search" placeholder="Search for a pokemon">
                             <button class = "button-search" id = "pokemon-search"><i class="fas fa-search"></i></button>
                         </div>
                     </form>
