--- a/medp331/class_6_midterm/index.html
+++ b/medp331/class_6_midterm/index.html
@@ -30,14 +30,14 @@
                 </nav>
                 <div class="regions">
                     <button class = "filter-button" id = "filter-all">All</button>
-                    <button class = "filter-button" id = "filter-kanto">Kanto</button>
-                    <button class = "filter-button" id = "filter-johto">Johto</button>
-                    <button class = "filter-button" id = "filter-hoenn">Hoenn</button>
-                    <button class = "filter-button" id = "filter-sinnoh">Sinnoh</button>
-                    <button class = "filter-button" id = "filter-unova">Unova</button>
-                    <button class = "filter-button" id = "filter-kalos">Kalos</button>
-                    <button class = "filter-button" id = "filter-alola">Alola</button>
-                    <button class = "filter-button" id = "filter-galar">Galar</button>
+                    <button class = "filter-button" id = "filter-kanto">Kanto (Gen 1)</button>
+                    <button class = "filter-button" id = "filter-johto">Johto (Gen 2)</button>
+                    <button class = "filter-button" id = "filter-hoenn">Hoenn (Gen 3)</button>
+                    <button class = "filter-button" id = "filter-sinnoh">Sinnoh (Gen 4)</button>
+                    <button class = "filter-button" id = "filter-unova">Unova (Gen 5)</button>
+                    <button class = "filter-button" id = "filter-kalos">Kalos (Gen 6)</button>
+                    <button class = "filter-button" id = "filter-alola">Alola (Gen 7)</button>
+                    <button class = "filter-button" id = "filter-galar">Galar (Gen 8)</button>
                 </div>
             </div>
         </div>
