removed theme changer

--- a/works.html
+++ b/works.html
@@ -57,14 +57,14 @@
                     <div class="col-lg-8 my-5">
                         <div class="wrapper">
                             <div class="category-wrapper">
-                                <a href="https://github.com/ShadowViper" class="work-link">
+                                <a href="https://github.com/JS0Nwong" class="work-link">
                                     <h1 class = "category">Class - Computer Science</h1>
                                     <h1 class = "class-type">CSCI-127</h1>
                                 </a>
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="https://github.com/ShadowViper" class="work-link">
+                                <a href="https://github.com/JS0Nwong" class="work-link">
                                     <h1 class = "category">Class - Computer Science</h1>
                                     <h1 class = "class-type">CSCI-135</h1>
                                 </a>
@@ -92,7 +92,7 @@
                                 <div class="whitespace"></div>
                             </div>
                             <div class="category-wrapper">
-                                <a href="./medp331/works.html" class="work-link">
+                                <a href="https://github.com/JS0Nwong/JS0Nwong.github.io/tree/main/medp331" class="work-link">
                                     <h1 class="category">Class - Media Studies</h1>
                                     <h1 class = "class-type">MEDP-331</h1>
                                 </a>
@@ -112,7 +112,6 @@
                         </ul>
                     </div>
                     <div class="col-lg-7"></div>
-                    <div class="col-lg-2 my-5"><button class="toggle" type="button" id = "colorChange">change theme</button></div>
                 </div>
             </div>
         </main>
